# aws-datalake-guard

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  llms.txt  main.py  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: adoption-checklist.md  architecture.md  aws-api-coverage.md  aws-permissions.md  ci-evidence-workflows.md  cli.md  exception-lifecycle.md  faq.md  finding-catalog.md  github-actions.md  import-adoption-recipes.md  lake-formation-guide.md  library-embedding-boundary.md  llm-agent-integration.md  permission-framework.md  permission-request-bundles.md  policy-authoring-direction.md  positioning.md  publishing.md  recipes.md  report-formats.md  request-screening.md  roadmap.md  safety-model.md  schema.json  service-integration.md  state-format.md  tag-permission-matrix.md  terraform-cdk-coexistence.md  testing.md  troubleshooting.md
docs/release-notes/: v0.1.0.md  v0.1.1.md  v0.10.0.md  v0.11.0.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.6.4.md  v0.6.5.md  v0.7.0.md  v0.7.1.md  v0.7.2.md  v0.8.0.md  v0.8.1.md  v0.8.2.md  v0.9.0.md  v0.9.1.md  v0.9.2.md
docs/schemas/: README.md  lfguard.audit.v1.schema.json  lfguard.explain_batch.v1.schema.json  lfguard.lint.v1.schema.json  lfguard.plan.v1.schema.json  lfguard.review.explain.v1.schema.json  lfguard.review.manifest.v1.schema.json  lfguard.review.summary.v1.schema.json  lfpolicy.audit.v1.schema.json  lfpolicy.explain_batch.v1.schema.json  lfpolicy.lint.v1.schema.json  lfpolicy.plan.v1.schema.json  lfpolicy.review.explain.v1.schema.json  lfpolicy.review.manifest.v1.schema.json  lfpolicy.review.summary.v1.schema.json
examples/: README.md  access-current-snapshot.json  access-requests.json  current-snapshot.json  desired.json  desired.yaml  permission-requests.py  policy-bundles.py  policy-exceptions.json  policy-from-import.py  policy.py
examples/artifacts/: lfguard-apply-dry-run.md  lfguard-audit.json  lfguard-explain-batch.json  lfguard-explain.json  lfguard-plan.json  lfpolicy-audit.json  lfpolicy-explain-batch.json  lfpolicy-explain.json  lfpolicy-plan.json
examples/artifacts/explain-batch-cases/: allowed.json  denied_missing_permission.json  denied_no_matching_grant.json
examples/artifacts/review-bundle/: audit.json  explain.json  lint.json  manifest.json  plan.json  summary.json  summary.md
examples/artifacts/review-cases/approval_required/: desired.json  lint.json  manifest.json  summary.json  summary.md
examples/artifacts/review-cases/blocked/: current.json  desired.json  explain.json  lint.json  manifest.json  plan.json  summary.json  summary.md
examples/artifacts/review-cases/passed/: audit.json  manifest.json  plan.json  summary.json  summary.md
examples/artifacts/review-cases/review_required/: audit.json  desired.json  explain.json  lint.json  manifest.json  plan.json  summary.json  summary.md
examples/github-actions/: lakeformation-code-scanning.yml  lakeformation-drift.yml
examples/pre-commit/: pre-commit-config.yaml
src/lakeformation_guard/: __init__.py  __main__.py  _version.py  advisory.py  audit.py  aws.py  aws_permissions.py  aws_requests.py  cli.py  config.py  explain.py  finding_catalog.py  io.py  lint.py  models.py  permissions.py  planner.py  policy.py  provider.py  schema.py  state_index.py
src/lfpolicy/: __init__.py  __main__.py  advisory.py  audit.py  aws.py  aws_permissions.py  aws_requests.py  cli.py  config.py  explain.py  finding_catalog.py  io.py  lint.py  models.py  permissions.py  planner.py  policy.py  provider.py  schema.py  state_index.py
tests/: test_audit_cli.py  test_aws_adapter.py  test_aws_adapter_moto.py  test_aws_adapter_stubber.py  test_aws_permissions.py  test_docs_examples.py  test_finding_catalog.py  test_live_aws_contract.py  test_models.py  test_package_metadata.py  test_planner.py  test_policy.py  test_provider_explain.py
