[metadata]
name = lfguard
version = 0.1.0
description = Opinionated guardrails for auditing, planning, and conservatively applying AWS Lake Formation LF-Tag policy changes.
long_description = file: README.md
long_description_content_type = text/markdown
author = Yongjip Kim
author_email = yongjip@sas.upenn.edu
license = Apache-2.0
license_files = LICENSE
url = https://github.com/yongjip/aws-datalake-guard
project_urls =
    Homepage = https://github.com/yongjip/aws-datalake-guard
    Repository = https://github.com/yongjip/aws-datalake-guard
    Issues = https://github.com/yongjip/aws-datalake-guard/issues
keywords =
    aws
    lake-formation
    lf-tag
    glue
    data-catalog
    governance
    guardrails
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Security
    Topic :: System :: Systems Administration

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =

[options.packages.find]
where = src

[options.package_data]
lakeformation_guard = py.typed

[options.extras_require]
aws =
    boto3>=1.28
yaml =
    PyYAML>=6
test =
    pytest>=7
dev =
    build>=1
    pytest>=7
    twine>=4

[options.entry_points]
console_scripts =
    lfguard = lakeformation_guard.cli:main
    aws-lakeformation-guard = lakeformation_guard.cli:main
