[metadata]
name = lfpolicy
version = 0.11.0
description = Advisory evidence framework for reviewing, auditing, planning, and explaining AWS Lake Formation permissions.
long_description = file: README.md
long_description_content_type = text/markdown
author = Yongjip Kim
author_email = yongjip@sas.upenn.edu
license = Apache-2.0
license_files = LICENSE
url = https://github.com/yongjip/lfpolicy
project_urls =
    Homepage = https://github.com/yongjip/lfpolicy
    Documentation = https://github.com/yongjip/lfpolicy#readme
    Repository = https://github.com/yongjip/lfpolicy
    CLI Reference = https://github.com/yongjip/lfpolicy/blob/main/docs/cli.md
    Adoption Checklist = https://github.com/yongjip/lfpolicy/blob/main/docs/adoption-checklist.md
    LLM Agent Integration = https://github.com/yongjip/lfpolicy/blob/main/docs/llm-agent-integration.md
    Service Integration = https://github.com/yongjip/lfpolicy/blob/main/docs/service-integration.md
    Report Formats = https://github.com/yongjip/lfpolicy/blob/main/docs/report-formats.md
    Report Schemas = https://github.com/yongjip/lfpolicy/tree/main/docs/schemas
    Finding Catalog = https://github.com/yongjip/lfpolicy/blob/main/docs/finding-catalog.md
    Architecture = https://github.com/yongjip/lfpolicy/blob/main/docs/architecture.md
    Permission Framework = https://github.com/yongjip/lfpolicy/blob/main/docs/permission-framework.md
    Roadmap = https://github.com/yongjip/lfpolicy/blob/main/docs/roadmap.md
    Safety Model = https://github.com/yongjip/lfpolicy/blob/main/docs/safety-model.md
    Lake Formation Guide = https://github.com/yongjip/lfpolicy/blob/main/docs/lake-formation-guide.md
    Tag and Permission Matrix = https://github.com/yongjip/lfpolicy/blob/main/docs/tag-permission-matrix.md
    Positioning = https://github.com/yongjip/lfpolicy/blob/main/docs/positioning.md
    State Format = https://github.com/yongjip/lfpolicy/blob/main/docs/state-format.md
    AWS API Coverage = https://github.com/yongjip/lfpolicy/blob/main/docs/aws-api-coverage.md
    FAQ = https://github.com/yongjip/lfpolicy/blob/main/docs/faq.md
    Troubleshooting = https://github.com/yongjip/lfpolicy/blob/main/docs/troubleshooting.md
    Examples = https://github.com/yongjip/lfpolicy/tree/main/examples
    Issues = https://github.com/yongjip/lfpolicy/issues
    CI = https://github.com/yongjip/lfpolicy/actions/workflows/ci.yml
    Changelog = https://github.com/yongjip/lfpolicy/blob/main/CHANGELOG.md
    Security = https://github.com/yongjip/lfpolicy/blob/main/SECURITY.md
keywords =
    aws
    aws-lake-formation
    lake-formation
    lakeformation
    lf-tag
    lfpolicy
    glue
    aws-glue
    data-catalog
    data-governance
    data-lake
    access-control
    permissions
    policy-as-code
    drift-detection
    governance
    guardrails
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Database
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =

[options.packages.find]
where = src

[options.package_data]
lfpolicy = py.typed

[options.extras_require]
aws =
    boto3>=1.28
yaml =
    PyYAML>=6
test =
    botocore>=1.31
    pytest>=7
mock-aws =
    boto3>=1.28
    moto>=5
dev =
    build>=1
    botocore>=1.31
    pytest>=7
    twine>=4

[options.entry_points]
console_scripts =
    lfpolicy = lfpolicy.cli:main
